--- a/README.adoc
+++ b/README.adoc
@@ -39,14 +39,14 @@ Start commit subject messages with one of these:
 - `doc`: related do documentation.
 
 
-## Dev Setup
+== Dev Setup
 
 NOTE: Instead of using an IDE (gnome-builder, anjuta, etc) with a ready (and sometimes bloated) gtk application template, I decided to do things step-by-step, learning along the way and setting things up as needed, keeping everything as minimal and simple as possible.
 
 Make sure the Gtk (3) dev stuff is installed. On Arch Linux, the header files are always packaged with the program/lib they relate to. For example, if Gtk is installed, you are ready to develop and compile Gtk applications because that package contains the header files and installs them under `/usr/include/` subdirectories. On a Debian-based distro, one generally needs to install the _-dev_ packages, like `libgtk-3-dev` or something like that.
 
 
-### Compiling and Running
+=== Compiling and Running
 
 Basically, we need to translate the UI resources to a `.c` file and then run compile everything. Take a look at the `Makefile`.
 
@@ -73,11 +73,11 @@ The `ui-resource.c` file only needs to be regenerated if an UI or XML resource f
 
 There are link:https://developer.gnome.org/gtk3/stable/gtk-running.html[docs on compiling and debugging Gtk apps^].
 
-### Vim
+=== Vim
 
 It looks like ALE and YCM were both doing linting. Disabled ALE for now and YCM is indeed doing some linting on its own. `.ycm_extra_conf.py` barely configured with Gtk stuff.
 
-### VSCode
+=== VSCode
 
 Yes, VSCode seems to be doing a good job with C. The link:https://code.visualstudio.com/docs/languages/cpp[C/C++] extension is working fine for me, on Arch Linux! Semantic completion is working fine, and hovering over stuff shows documentation about it! I added  C/Gtk stuff in the extension's include path configuration, though, in VSCode's `settings.json`.
 
@@ -119,5 +119,4 @@ $ pkg-config \
 ----
 
 Check the link:https://developer.gnome.org/gtk3/stable/gtk-compiling.html[docs on compiling Gtk apps^].
-
 
